# ClipVault

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ppa.yml  publish.yml
app/: main.py
app/core/: clipboard_watcher.py  history_manager.py
app/models/: clip_item.py
app/shared/: constants.py
app/tests/: conftest.py  test_clip_item.py  test_clipboard_watcher.py  test_history_manager.py  test_hotkey_listener.py
app/ui/: main_window.py  tray_icon.py
app/ui/widgets/: clip_item_widget.py
app/workers/: hotkey_listener.py
debian/: changelog  clipvault.desktop  install  postinst  prerm
installation/: README.md  clipvault-toggle.sh  install.sh  uninstall.sh
